Slider Arrow Navigation fixed and alignment issues fixed

--- a/src/Views/StaticSite/Views/Courses/Views/Nutridiet.scss
+++ b/src/Views/StaticSite/Views/Courses/Views/Nutridiet.scss
@@ -4574,6 +4574,35 @@
     width: 100%;
   }
   }
+
+  .swiperButtonNext,
+.swiperButtonPrev,
+.customPagination,
+.swiper-pagination-bullet {
+  top: unset !important;
+  bottom: unset !important;
+  left: unset !important;
+  right: unset !important;
+  /* width: auto !important; */
+  position: unset !important;
+
+}
+
+.swiperButtonNext,
+.swiperButtonPrev {
+  border: 2px solid var(--Prussian-Blue);
+  padding: 18px;
+  border-radius: 100%;
+  width: 44px;
+  height: 44px;
+}
+
+.swiperButtonNext::after,
+.swiperButtonPrev::after {
+  color: var(--Prussian-Blue);
+  font-size: 17px;
+  font-weight: 900;
+}
   
   // .timeline-mobile-cards {
   //   position: relative;
