--- a/src/Views/StaticSite/Views/NutriDiet/Subscription/style.scss
+++ b/src/Views/StaticSite/Views/NutriDiet/Subscription/style.scss
@@ -8,6 +8,7 @@
   text-align: center;
   background: #fff;
   overflow-y: scroll;
+  z-index: 999;
   &>h2{
     width: fit-content;
     margin: 0 auto;
